# ucpd-passthrough

./: QFN_D01PUR_STM.step  fp-lib-table  mcu.kicad_sch  pd.kicad_sch  stpd01.kicad_sym  sym-lib-table  ucpd-passthrough.kicad_pcb  ucpd-passthrough.kicad_prl  ucpd-passthrough.kicad_pro  ucpd-passthrough.kicad_sch
KCM55WR7YA476MH01L/: CAPC6153X670N.kicad_mod  KCM55WR7YA476MH01L.kicad_sym
KRM55WR71E686MH01K/KiCADv6/: 2025-01-25_15-25-13.kicad_sym
KRM55WR71E686MH01K/KiCADv6/footprints.pretty/: CAP_KRM55_MUR-L.kicad_mod  CAP_KRM55_MUR-M.kicad_mod  CAP_KRM55_MUR.kicad_mod
models/: 691137710002.stp
sprh1210/: IND_SPRH1210-100M.kicad_mod  SPRH1210-100M.kicad_sym  SPRH1210-100M.step
stpd01.pretty/: QFN_D01PUR_STM-L.kicad_mod  QFN_D01PUR_STM-M.kicad_mod  QFN_D01PUR_STM.kicad_mod
test-firmware/: Cargo.toml
test-firmware/.cargo/: config.toml
test-firmware/src/: main.rs
