[package]
name = "test-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-stm32 = { version = "0.2.0", features = ["stm32g0b1ce", "memory-x", "defmt"] }
embassy-time = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
